--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "localstorage-jquery-underscore-express-sass-heroku-alex-javi-moi-2",
-  "version": "0.0.0",
+  "name": "application-name",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
+    "engines": {
+    "node": "0.10.x",
+    "npm": "1.3.x"
+  },
+  
+  
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
