--- a/package.json
+++ b/package.json
@@ -6,14 +6,11 @@
     "start": "node ./bin/www",
     "test": "./node_modules/karma/bin/karma start --single-run --browsers PhantomJS"
   },
-    "engines": {
+  "engines": {
     "node": "0.10.x",
     "npm": "1.3.x"
   },
-  
-  
   "dependencies": {
-    
     "chai": "^3.5.0",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
@@ -34,7 +31,6 @@
     "mocha": "~2.4.5",
     "phantomjs-prebuilt": "^2.1.7",
     "sinon": "~1.17.3",
-    
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
@@ -42,5 +38,8 @@
     "express": "~4.13.1",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "node-sass-middleware": "^0.9.8"
   }
 }
