--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "test": "./node_modules/karma/bin/karma start --single-run --browsers PhantomJS"
+    "test": "node app.js",
+     "start": "node app.js",
+    "view": "open http://localhost:8080/"
   },
   "engines": {
     "node": "0.10.x",
